# RTOS_I2C_Git

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  definiciones.h  freertos_task.c  max30100.c  projecto.py  projecto_tpc.c
includes/: definiciones.h  freertos_task.h  max30100.h
projecto_tp/: CMakeLists.txt  FreeRTOSConfig.h  projecto_tpc.c
